wordpress/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: wordpress
  labels:
    app: wordpress-mysql
spec:
  selector:
    app: wordpress-mysql
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql
